# ai-ml-learning-journey

./: .env  .gitignore  Dockerfile  README.md  WEEK1_LEARNING_GUIDE.md  compose.yml  pyproject.toml  redis.conf
ai_ml_learning_journey.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
alembic/versions/: abe37b575791_add_pdf_processing_fields.py
concepts/learn-httpx/: learn-httpx.ipynb
concepts/learn_airflow/: Dockerfile
concepts/learn_fast_api/: books.py  shipment.py
concepts/learn_fastapi_database/: async_sqlalchemy_concepts.html  test_database.py
concepts/learn_llm_fundamentals/: attention_calculation_flow.py  generate_interactive_attention.py  generate_interactive_attention_progressive.py  interactive_attention.html  (+4 more)
detailed learning plan/: WEEK15_LEARNING_GUIDE.md  WEEK16_LEARNING_GUIDE.md  WEEK2_LEARNING_GUIDE.md  WEEK3_4_LEARNING_GUIDE.md  WEEK3_LEARNING_GUIDE.md  WEEK5_LEARNING_GUIDE.md  WEEK6_LEARNING_GUIDE.md  WEEK7_LEARNING_GUIDE_UPDATED.md  WEEK8_LEARNING_GUIDE.md  WEEK9_LEARNING_GUIDE.md
week1/: README.md
weekly learning guides/: WEEK10_LEARNING_GUIDE.md  WEEK11_LEARNING_GUIDE.md  WEEK14_LEARNING_GUIDE.md  WEEK17_LEARNING_GUIDE.md  WEEK18_LEARNING_GUIDE.md  WEEK19_LEARNING_GUIDE.md  WEEK20_LEARNING_GUIDE.md  WEEK21_LEARNING_GUIDE.md  WEEK22_LEARNING_GUIDE.md  WEEK23_LEARNING_GUIDE.md  WEEK23_LEARNING_GUIDE_with_code.md  WEEK24_LEARNING_GUIDE.md  WEEK24_LEARNING_GUIDE_with_code.md  WEEK25_LEARNING_GUIDE.md  WEEK25_LEARNING_GUIDE_with_code.md  WEEK7_LEARNING_GUIDE_UPDATED.md  WEEK8_LEARNING_GUIDE.md  WEEK9_LEARNING_GUIDE.md
(+117 files in other folders)
