[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-ml-learning-journey"
version = "0.1.0"
description = "AI/ML Learning Journey with FastAPI examples"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "scalar-fastapi>=1.5.0",
    "sqlalchemy>=2.0.44",
    "psycopg2-binary>=2.9.11",
    "apache-airflow>=3.1.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["concepts*", "projects*"]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",  # for testing FastAPI
]
